# CottonOS

./: .gitignore  Cargo.toml  Makefile  README.md  bochsrc.txt
.cargo/: config.toml  x86_64-cottonos.json
bootloader/: Cargo.toml
bootloader/src/: lib.rs  vga.rs
bootloader/x86/: boot.asm  multiboot.asm  stage2.asm
kernel/: Cargo.toml  boot_stub.asm
kernel/src/: main.rs  shell.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  cpu.rs  gdt.rs  idt.rs  mod.rs  paging.rs  pit.rs  serial.rs
kernel/src/crypto/: tls.rs
kernel/src/drivers/: console.rs  graphics.rs  keyboard.rs  mod.rs  mouse.rs  network.rs
kernel/src/drivers/storage/: ata.rs  mod.rs
kernel/src/fs/: cottonfs.rs  devfs.rs  mod.rs  vfs.rs
kernel/src/gui/: mod.rs
kernel/src/mm/: heap.rs  mod.rs  physical.rs  virtual_mem.rs
kernel/src/proc/: mod.rs  process.rs  scheduler.rs  thread.rs
kernel/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs
kernel/src/syscall/: handlers.rs  mod.rs
linker/: x86_64.ld  x86_64_direct.ld
userspace/: Cargo.toml
userspace/src/: lib.rs  shell.rs  syscall.rs
