[package]
name = "cotton_kernel"
version = "0.1.0"
edition = "2021"
authors = ["aryansrao"]
description = "The CottonOS kernel"

# Build as static library for linking with boot stub
[lib]
name = "cotton_kernel"
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies]
spin = "0.9"
bitflags = "2.4"
volatile = "0.5"
linked_list_allocator = "0.10"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[features]
default = []
x86_64 = []
aarch64 = []
test = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
